# cord-receipt-reconciliation

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
scripts/: check_secrets.py  create_dashboard_demo_media.py
src/receipt_reconciliation/: __init__.py  claims.py  cli.py  cord.py  evaluation.py  models.py  normalization.py  ocr.py  policy.py  tracing.py  workflow.py
tests/: test_agent_scenarios.py  test_claims.py  test_cli.py  test_cord.py  test_evaluation.py  test_normalization.py  test_ocr.py  test_policy.py  test_tracing.py  test_workflow.py
web-dashboard/: vite.config.ts
web-dashboard/app/: globals.css  layout.tsx  page.tsx
web-dashboard/app/components/: OcrInspector.tsx
web-dashboard/app/data/: demo.json
web-dashboard/tests/: rendered-html.test.mjs
